syntax = "proto3";
package crowlabs.eta.market;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "eta/market/params.proto";
import "eta/market/item.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/crow-labs/eta/x/market/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crow-labs/eta/market/params";
  }
  // Queries a Item by index.
	rpc Item(QueryGetItemRequest) returns (QueryGetItemResponse) {
		option (google.api.http).get = "/crow-labs/eta/market/item/{itemId}";
	}

	// Queries a list of Item items.
	rpc ItemAll(QueryAllItemRequest) returns (QueryAllItemResponse) {
		option (google.api.http).get = "/crow-labs/eta/market/item";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetItemRequest {
	  uint64 itemId = 1;

}

message QueryGetItemResponse {
	Item item = 1 [(gogoproto.nullable) = false];
}

message QueryAllItemRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllItemResponse {
	repeated Item item = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
